--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/mongoose": "^9.1.1",
     "@nestjs/platform-express": "^8.0.0",
+    "bcrypt": "^5.0.1",
+    "compression": "^1.7.4",
+    "helmet": "^5.1.0",
+    "joi": "^17.6.0",
     "mongoose": "^6.4.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
