Replace secret with env var

--- a/development.env
+++ b/development.env
@@ -1,3 +1,5 @@
 NODE_ENV=development
 PORT=3001
 MONGODB_CONNECTION_STRING=mongodb+srv://Admin:kVe06yGxhgULcEGr@cluster0.6cthc.mongodb.net/CookBook?retryWrites=true&w=majority
+JWT_SECRET='cookbookS3cr3T'
+TOKEN_EXP_TIME='1d'
