--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/passport": "^8.2.2",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^5.2.1",
+    "aws-sdk": "^2.1166.0",
     "bcrypt": "^5.0.1",
     "compression": "^1.7.4",
     "helmet": "^5.1.0",
